fixed image on mobile

--- a/templesuites/css/small.css
+++ b/templesuites/css/small.css
@@ -279,8 +279,9 @@ color: white;
 }
 
 .cards img {
-    height: 250;
-    width: 400px;
+    width: 100%;
+    height: auto;
+    max-width: 400px;
 }
 
 .cards p {
